Stop using OS_WINDOWS

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ projects/msvc12/GeneratedFiles
 projects/msvc12/libGLideNHQ.dir
 src/Revision.h
 /projects/msvc/.vs
+/projects/msvc/GLideN64.VC.VC.opendb
+/projects/msvc/GLideN64.VC.db
